src/Netbeans/jsop/src/main/java/com/company/jsop/antlr/langParser.java
// Generated from /home/jakob/github/ideas/classpoolmod/src/NetBeans/neo4jtest/src/main/java/com/company/neo4jtest/antlr/lang.g4 by ANTLR 4.7.1
package com.company.jsop.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class langParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_THIS=1, KW_VAR=2, KW_FUNCTION=3, KW_NATIVE=4, KW_RETURN=5, KW_FOR=6, 
		KW_IF=7, KW_ELSE=8, KW_TRUE=9, KW_FALSE=10, KW_NEW=11, OP_PLUS=12, OP_PLUS_PLUS=13, 
		OP_MINUS=14, OP_MINUS_MINUS=15, OP_MULT=16, OP_DIV=17, OP_REM=18, OP_LT=19, 
		OP_LTE=20, OP_GT=21, OP_GTE=22, OP_IN=23, OP_INO=24, OP_OR=25, OP_AND=26, 
		OP_BOR=27, OP_BXOR=28, OP_BAND=29, OP_EQ=30, OP_INEQ=31, OP_SEQ=32, OP_SINEQ=33, 
		DOT=34, COLON=35, SEMI_COLON=36, COMMA=37, ASSIGN=38, ASSIGN_PLUS=39, 
		ASSIGN_MINUS=40, ASSIGN_MULT=41, ASSIGN_DIV=42, ASSIGN_REM=43, OPEN_PAR=44, 
		CLOSE_PAR=45, OPEN_BRACKET=46, CLOSE_BRACKET=47, OPEN_SQ_BRACKET=48, CLOSE_SQ_BRACKET=49, 
		ID=50, STRING=51, NUMBER=52, WS=53, SINGLE_LINE_COMMENT=54, MULTI_LINE_COMMENT=55;
	public static final int
		RULE_block = 0, RULE_programElement = 1, RULE_expression = 2, RULE_statement = 3, 
		RULE_variableDeclaration = 4, RULE_assignment = 5, RULE_assignmentOp = 6, 
		RULE_returnStatement = 7, RULE_forStatement = 8, RULE_ifStatement = 9, 
		RULE_blockOrSingle = 10, RULE_expressionLogicalOr = 11, RULE_expressionLogicalAnd = 12, 
		RULE_expressionBitwiseOr = 13, RULE_expressionBitwiseXOr = 14, RULE_expressionBitwiseAnd = 15, 
		RULE_expressionEquality = 16, RULE_expressionEqualityOp = 17, RULE_expressionComparison = 18, 
		RULE_binaryComparisonOperand = 19, RULE_expression1 = 20, RULE_binaryAdditionOperand = 21, 
		RULE_binaryAdditionOperator = 22, RULE_expression2 = 23, RULE_binaryMultOperand = 24, 
		RULE_binaryMultOperator = 25, RULE_expression3 = 26, RULE_slotGetOrApply = 27, 
		RULE_slotGet = 28, RULE_slotGetByStaticId = 29, RULE_slotGetByDynamicId = 30, 
		RULE_slotSet = 31, RULE_slotSetByStaticId = 32, RULE_slotSetByDynamicId = 33, 
		RULE_sqBracketIndex = 34, RULE_expression4 = 35, RULE_identifier = 36, 
		RULE_string = 37, RULE_number = 38, RULE_bool = 39, RULE_objectLiteral = 40, 
		RULE_objectLiteralSlot = 41, RULE_arrayLiteral = 42, RULE_apply = 43, 
		RULE_functionLiteral = 44, RULE_nativeObject = 45, RULE_self = 46, RULE_groupExpression = 47, 
		RULE_newInstance = 48;
	public static final String[] ruleNames = {
		"block", "programElement", "expression", "statement", "variableDeclaration", 
		"assignment", "assignmentOp", "returnStatement", "forStatement", "ifStatement", 
		"blockOrSingle", "expressionLogicalOr", "expressionLogicalAnd", "expressionBitwiseOr", 
		"expressionBitwiseXOr", "expressionBitwiseAnd", "expressionEquality", 
		"expressionEqualityOp", "expressionComparison", "binaryComparisonOperand", 
		"expression1", "binaryAdditionOperand", "binaryAdditionOperator", "expression2", 
		"binaryMultOperand", "binaryMultOperator", "expression3", "slotGetOrApply", 
		"slotGet", "slotGetByStaticId", "slotGetByDynamicId", "slotSet", "slotSetByStaticId", 
		"slotSetByDynamicId", "sqBracketIndex", "expression4", "identifier", "string", 
		"number", "bool", "objectLiteral", "objectLiteralSlot", "arrayLiteral", 
		"apply", "functionLiteral", "nativeObject", "self", "groupExpression", 
		"newInstance"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'this'", "'var'", "'function'", "'native'", "'return'", "'for'", 
		"'if'", "'else'", "'true'", "'false'", "'new'", "'+'", "'++'", "'-'", 
		"'--'", "'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'in'", "'instanceof'", 
		"'||'", "'&&'", "'|'", "'^'", "'&'", "'=='", "'!='", "'==='", "'!=='", 
		"'.'", "':'", "';'", "','", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", 
		"'('", "')'", "'{'", "'}'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "KW_THIS", "KW_VAR", "KW_FUNCTION", "KW_NATIVE", "KW_RETURN", "KW_FOR", 
		"KW_IF", "KW_ELSE", "KW_TRUE", "KW_FALSE", "KW_NEW", "OP_PLUS", "OP_PLUS_PLUS", 
		"OP_MINUS", "OP_MINUS_MINUS", "OP_MULT", "OP_DIV", "OP_REM", "OP_LT", 
		"OP_LTE", "OP_GT", "OP_GTE", "OP_IN", "OP_INO", "OP_OR", "OP_AND", "OP_BOR", 
		"OP_BXOR", "OP_BAND", "OP_EQ", "OP_INEQ", "OP_SEQ", "OP_SINEQ", "DOT", 
		"COLON", "SEMI_COLON", "COMMA", "ASSIGN", "ASSIGN_PLUS", "ASSIGN_MINUS", 
		"ASSIGN_MULT", "ASSIGN_DIV", "ASSIGN_REM", "OPEN_PAR", "CLOSE_PAR", "OPEN_BRACKET", 
		"CLOSE_BRACKET", "OPEN_SQ_BRACKET", "CLOSE_SQ_BRACKET", "ID", "STRING", 
		"NUMBER", "WS", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "lang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public langParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BlockContext extends ParserRuleContext {
		public List<ProgramElementContext> programElement() {
			return getRuleContexts(ProgramElementContext.class);
		}
		public ProgramElementContext programElement(int i) {
			return getRuleContext(ProgramElementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langVisitor ) return ((langVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(98);
					programElement();
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramElementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(langParser.SEMI_COLON, 0); }
		public ProgramElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programElement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langVisitor ) return ((langVisitor<? extends T>)visitor).visitProgramElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramElementContext programElement() throws RecognitionException {
		ProgramElementContext _localctx = new ProgramElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programElement);
		int _la;
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_VAR:
			case KW_RETURN:
			case KW_FOR:
			case KW_IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				statement();
				}
				break;
			case KW_THIS:
			case KW_FUNCTION:
			case KW_NATIVE:
			case KW_TRUE:
			case KW_FALSE:
			case KW_NEW:
			case OPEN_PAR:
			case OPEN_BRACKET:
			case OPEN_SQ_BRACKET:
			case ID:
			case STRING:
			case NUMBER:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(105);
				expression();
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI_COLON) {
					{
					setState(106);
					match(SEMI_COLON);
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ExpressionLogicalOrContext expressionLogicalOr() {
			return getRuleContext(ExpressionLogicalOrContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langVisitor ) return ((langVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				expressionLogicalOr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(langParser.SEMI_COLON, 0); }
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langVisitor ) return ((langVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_VAR:
			case KW_RETURN:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(117);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case KW_RETURN:
					{
					setState(115);
					returnStatement();
					}
					break;
				case KW_VAR:
					{
					setState(116);
					variableDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI_COLON) {
					{
					setState(119);
					match(SEMI_COLON);
					}
				}

				}
				}
				break;
			case KW_FOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				forStatement();
				}
				break;
			case KW_IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				ifStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode KW_VAR() { return getToken(langParser.KW_VAR, 0); }
		public TerminalNode ID() { return getToken(langParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(langParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langVisitor ) return ((langVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(KW_VAR);
			setState(127);
			match(ID);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(128);
				match(ASSIGN);
				setState(129);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(langParser.ID, 0); }
		public AssignmentOpContext assignmentOp() {
			return getRuleContext(AssignmentOpContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langVisitor ) return ((langVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(ID);
			setState(133);
			assignmentOp();
			setState(134);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentOpContext extends ParserRuleContext {
		public Token op;
		public TerminalNode ASSIGN() { return getToken(langParser.ASSIGN, 0); }
		public TerminalNode ASSIGN_PLUS() { return getToken(langParser.ASSIGN_PLUS, 0); }
		public TerminalNode ASSIGN_MINUS() { return getToken(langParser.ASSIGN_MINUS, 0); }
		public TerminalNode ASSIGN_MULT() { return getToken(langParser.ASSIGN_MULT, 0); }
		public TerminalNode ASSIGN_DIV() { return getToken(langParser.ASSIGN_DIV, 0); }
		public TerminalNode ASSIGN_REM() { return getToken(langParser.ASSIGN_REM, 0); }
		public AssignmentOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentOp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langVisitor ) return ((langVisitor<? extends T>)visitor).visitAssignmentOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentOpContext assignmentOp() throws RecognitionException {
		AssignmentOpContext _localctx = new AssignmentOpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignmentOp);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSIGN:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				((AssignmentOpContext)_localctx).op = match(ASSIGN);
				}
				break;
			case ASSIGN_PLUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				((AssignmentOpContext)_localctx).op = match(ASSIGN_PLUS);
				}
				break;
			case ASSIGN_MINUS:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				((AssignmentOpContext)_localctx).op = match(ASSIGN_MINUS);
				}
				break;
			case ASSIGN_MULT:
				enterOuterAlt(_localctx, 4);
				{
				setState(139);
				((AssignmentOpContext)_localctx).op = match(ASSIGN_MULT);
				}
				break;
			case ASSIGN_DIV:
				enterOuterAlt(_localctx, 5);
				{
				setState(140);
				((AssignmentOpContext)_localctx).op = match(ASSIGN_DIV);
				}
				break;
			case ASSIGN_REM:
				enterOuterAlt(_localctx, 6);
				{
				setState(141);
				((AssignmentOpContext)_localctx).op = match(ASSIGN_REM);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode KW_RETURN() { return getToken(langParser.KW_RETURN, 0); }
		public Expression1Context expression1() {
			return getRuleContext(Expression1Context.class,0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langVisitor ) return ((langVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(KW_RETURN);
			setState(145);
			expression1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForStatementContext extends ParserRuleContext {
		public ExpressionContext init;
		public ExpressionContext condition;
		public ExpressionContext update;
		public BlockContext body;
		public TerminalNode KW_FOR() { return getToken(langParser.KW_FOR, 0); }
		public TerminalNode OPEN_PAR() { return getToken(langParser.OPEN_PAR, 0); }
		public List<TerminalNode> SEMI_COLON() { return getTokens(langParser.SEMI_COLON); }
		public TerminalNode SEMI_COLON(int i) {
			return getToken(langParser.SEMI_COLON, i);
		}
		public TerminalNode CLOSE_PAR() { return getToken(langParser.CLOSE_PAR, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(langParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(langParser.CLOSE_BRACKET, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ForStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof langVisitor ) return ((langVisitor<? extends T>)visitor).visitForStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForStatementContext forStatement() throws RecognitionException {
		ForStatementContext _localctx = new ForStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(KW_FOR);
			setState(148);
			match(OPEN_PAR);
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_THIS) | (1L << KW_FUNCTION) | (1L << KW_NATIVE) | (1L << KW_TRUE) | (1L << KW_FALSE) | (1L << KW_NEW) | (1L << OPEN_PAR) | (1L << OPEN_BRACKET) | (1L << OPEN_SQ_BRACKET) | (1L << ID) | (1L << STRING) | (1L << NUMBER))) != 0)) {
				{
				setState(149);
				((ForStatementContext)_localctx).init = expression();
				}
			}

			setState(152);
			match(SEMI_COLON);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_THIS) | (1L << KW_FUNCTION) | (1L << KW_NATIVE) | (1L << KW_TRUE) | (1L << KW_FALSE) | (1L << KW_NEW) | (1L << OPEN_PAR) | (1L << OPEN_BRACKET) | (1L << OPEN_SQ_BRACKET) | (1L << ID) | (1L << STRING) | (1L << NUMBER))) != 0)) {
				{
				setState(153);
				((ForStatementContext)_localctx).condition = expression();
				}
			}

			setState(156);
			match(SEMI_COLON);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_THIS) | (1L << KW_FUNCTION) | (1L << KW_NATIVE) | (1L << KW_TRUE) | (1L << KW_FALSE) | (1L << KW_NEW) | (1L << OPEN_PAR) | (1L << OPEN_BRACKET) | (1L << OPEN_SQ_BRACKET) | (1L << ID) | (1L << STRING) | (1L << NUMBER))) != 0)) {
				{
				setState(157);
				((ForStatementContext)_localctx).update = expression();
				}
			}

			setState(160);
			match(CLOSE_PAR);
			setState(161);
			match(OPEN_BRACKET);
			setState(162);
			((ForStatementContext)_localctx).body = block();
			setState(163);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
